--- a/gb/25/9/5/n14588477.md
+++ b/gb/25/9/5/n14588477.md
@@ -14,18 +14,12 @@
 <p>近期传出南山人寿有意并购三商美邦人寿，尹崇尧表示，“一直都有在关注同业的发展，但现阶段还是专注在南山人寿本身的营运。”</p>
 <p>责任编辑：吕美琪</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542584.md#1">张丽善率团赴日取经 打造云林更完善的在地照护体系</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543271.md#1">中正大学与NICA及TICA 签署三方合作备忘录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544693.md#1">第3届福康嘉桃寿比诸罗 百位长辈温馨同乐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548070.md#1">长者睡眠品质差 恐加速神经退化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14552010.md#1">虐老通报案增加 逾半数为子女施暴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/22/n14557982.md#1">113年宜兰县卫生局荣获18项奖项殊荣</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/24/n14559434.md#1">木匠的家快乐裁缝手作课 阿公阿嬷好欢喜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/25/n14560603.md#1">全台首座长照体验基地    好屏生活长照馆启用</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/5/n14567603.md#1">嘉义大学第三人生大学 报名延长至8月25日</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568398.md#1">基隆阿公阿嬷秀舞技 国健署北区竞赛为市争光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/23/n10165368.md#1" target="_blank">赵刚：穿制服的思想</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/14/n7998054.md#1" target="_blank">“如没有法轮功 我后半生一定在轮椅上度过”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/17/n11326982.md#1" target="_blank">金言：香港反送中会引发“蝴蝶效应”？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/17/n10401300.md#1" target="_blank">三位西方富豪的经商成功之道</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
